# fixure

./: .gitignore  CMakeLists.txt  README.md  architecture.dot  flake.nix  proxy_mechanics.dot
.github/workflows/: ci.yml
app/: main.cpp
include/fixure/: dictionary.hpp  parser.hpp  proxy.hpp  replay.hpp  runner.hpp  scenario.hpp  session.hpp
src/: dictionary.cpp  parser.cpp  proxy.cpp  replay.cpp  runner.cpp  scenario.cpp  session.cpp
tests/: test_dictionary.cpp  test_framework.hpp  test_main.cpp  test_parser.cpp  test_proxy.cpp  test_scenario.cpp  test_session.cpp
